# Advanced_Data_Mining

./: BoxPlot.py  CMakeLists.txt  Jaccard_Euclidean.py  Quiz3.py  README.md  ScatterSlot.py  adm.cpp  adm.h  makefile  move.sh  quiz2.py
HW2/: task_1.py  task_2.py
